# a0-connector

./: .gitignore  AGENTS.md  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.handoffs/: handoff-a0-connector-20260402-182427.md  handoff-a0-connector-20260404-094943.md  handoff-a0-connector-20260404-111553.md  handoff-a0-connector-20260406-115709.md  handoff-a0-connector-refactor-plan-20260409-021439.md
devtools/: README.md  preview_launcher.py  serve.py  snapshot.py
docs/: README.md  architecture.md  configuration.md  development.md  tui-frontend.md
plugin/_a0_connector/helpers/: event_bridge.py
plugin/a0_connector/: plugin.yaml
plugin/a0_connector/api/: ws_connector.py
plugin/a0_connector/api/v1/: agents_list.py  base.py  capabilities.py  chat_create.py  chat_delete.py  chat_get.py  chat_reset.py  chats_list.py  compact_chat.py  connector_login.py  log_tail.py  message_send.py  model_presets.py  model_switcher.py  nudge.py  pause.py  projects.py  projects_list.py  settings_get.py  settings_set.py  skills_delete.py  skills_list.py  token_status.py
plugin/a0_connector/extensions/python/message_loop_prompts_after/: _76_include_remote_file_structure.py
plugin/a0_connector/helpers/: auth.py  event_bridge.py  ws_runtime.py
plugin/a0_connector/prompts/: agent.system.tool.code_execution_remote.md  agent.system.tool.text_editor_remote.md
plugin/a0_connector/tools/: code_execution_remote.py  text_editor_remote.py
plugin/a0_connector/websocket/connector/: main.py
specs/2-connector-plugin/: plan.md
src/agent_zero_cli/: __main__.py  app.py  attachments.py  availability.py  chat_commands.py  client.py  commands.py  compaction.py  computer_use.py  computer_use_helper.py  config.py  connection.py  event_handlers.py  instance_discovery.py  model_commands.py  model_config.py  profile_commands.py  project_commands.py  project_utils.py  remote_exec.py  remote_files.py  rendering.py  self_update.py  splash_helpers.py  state_sync.py  token_usage.py
src/agent_zero_cli/screens/: chat_list.py  compact_modal.py  host_input.py  login.py  model_presets.py  model_runtime.py  project_instructions.py  project_menu.py  settings_modal.py  skills_modal.py
src/agent_zero_cli/styles/: app.tcss  splash.md
src/agent_zero_cli/widgets/: __init__.py  chat_input.py  chat_log.py  command_palette.py  computer_use_banner.py  connection_status.py  dynamic_footer.py  model_switcher_bar.py  profile_menu_popover.py  project_menu_popover.py  shimmer.py  slash_menu.py  splash_view.py
tests/: test_app.py  test_attachments.py  test_chat_input.py  test_chat_log.py  test_client.py  test_computer_use.py  test_devtools.py  test_entrypoint.py  test_installers.py  test_instance_discovery.py  test_macos_backend_package.py  test_macos_computer_use_backend.py  test_model_presets_screen.py  test_model_switcher_bar.py  test_plugin_backend.py  test_profile_commands.py  test_remote_exec.py  test_remote_files.py  test_self_update.py  test_windows_computer_use_backend.py
tests/fixtures/: localhost-selfsigned.crt  localhost-selfsigned.key
