[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a0"
version = "1.5"
description = "Terminal chat interface for Agent Zero"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "agent0ai" },
]
keywords = ["agent-zero", "a0", "cli", "textual", "tui"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.50.0",
    "python-socketio[asyncio_client]>=5.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.11.0",
    'mss>=10.1.0; platform_system == "Linux"',
    'python-xlib>=0.33; platform_system == "Linux"',
    'pyobjc-framework-ApplicationServices; platform_system == "Darwin"',
    'pyobjc-framework-Quartz; platform_system == "Darwin"',
    'dxcam; platform_system == "Windows"',
    'pillow; platform_system == "Windows"',
    'pywinauto; platform_system == "Windows"',
]

[project.urls]
Homepage = "https://github.com/agent0ai/a0-connector"
Repository = "https://github.com/agent0ai/a0-connector"
Issues = "https://github.com/agent0ai/a0-connector/issues"

[project.scripts]
a0 = "agent_zero_cli.__main__:main"

[project.entry-points."a0.computer_use_backends"]
wayland = "a0_computer_use_wayland.backend:WAYLAND_BACKEND_SPEC"
x11 = "a0_computer_use_x11.backend:X11_BACKEND_SPEC"
macos = "a0_computer_use_macos.backend:MACOS_BACKEND_SPEC"
windows = "a0_computer_use_windows.backend:WINDOWS_BACKEND_SPEC"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agent_zero_cli",
    "packages/a0-computer-use-wayland/src/a0_computer_use_wayland",
    "packages/a0-computer-use-x11/src/a0_computer_use_x11",
    "packages/a0-computer-use-macos/src/a0_computer_use_macos",
    "packages/a0-computer-use-windows/src/a0_computer_use_windows",
]
